appId: ${APP_ID}
---
- runFlow: prep/nav-timeline-tab.yaml

- extendedWaitUntil:
    visible:
      text: "Checkpoints"
    timeout: 10000

- scroll
- waitForAnimationToEnd

- tapOn:
    text: "Create Checkpoint"
    optional: true
- tapOn:
    text: "Create property checkpoint"
    optional: true

- tapOn:
    text: "Close"
    optional: true
- tapOn:
    text: "Cancel"
    optional: true
